--- a/index.html
+++ b/index.html
@@ -3,82 +3,118 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./style.css" type="text/css" rel="stylesheet">
   </head>
-
   <body>
-    <header>             <!--HEADER--><!--HEADER-->
-      <div class="HeaderLogo">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
-          <span>My Times</span>
+    <header>
+      <div class="HeadLogo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+        <span>My Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">US</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+    </header>
+
+      <!-- Main News body-->
+
+      <div class="Content">
+        <!--Large Column-->
+
+        <div class="column large">
+          <div class="lead-story"> <!-- MOTHER STORY-->
+            <div class="image-content">
+              <span class="lead-story-image">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+            </div>
+            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+          </div>
+
+          <div class="stories"> <!-- ORCA STORY-->
+
+               <div class="story">
+                  <div class="text-content">
+                    <h2>Orca Spends Vacation at Land World Puget</h2>
+                    <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+                  </div>
+
+                  <div class="earth-image image-content"> <!-- Earth  STORY-->
+                    <span>Earth Spins Backwards for 2017</span>
+                  </div>
+              </div>
+
+            <div class="stories"> <!-- Burger STORY-->
+
+              <div class="story">
+                <div class="text-content">
+                  <h2>Burger for Breakfast: How Early is too Early?</h2>
+                  <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+                </div>
+                <div class="camera-image image-content">
+                  <span>Research Show Image Erase Memory</span>
+                </div>
+              </div>
+            </div>
+
+            </div>
+          </div>
+
+        <!--Column Medium-->
+
+        <div class="column medium">
+          <div class="stories">    <!--FBI-->
+            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+
+          </div>
+
+          <div class="cat-image image-content">
+            <span>Cats in Control-Is It a Thing?</span>
+          </div>
+
+          <div class="stories">
+            <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+
+          </div>
         </div>
 
-       <nav>
-          <span><a href="#World">World</a></span>
-          <span><a href="#U.S.">U.S.</a></span>
-          <span><a href="#Tech">Tech</a></span>
-          <span><a href="#Science">Science</a></span>
-        </nav>
-    </header>
-                                <!--NEWS--><!--BODY-->
+        <!--Column Small-->
 
-  <div class="DivColum">
-                                <!--LEFT COLUMN-->
-    <div class="First Column">
+        <div class="column small">
+          <div class="bites-image">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="">
+          </div>
 
-      <div class="Top Story Blank">
-        <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
-      </div>
-        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa. </p>
+          <div class="new-bites">
+            <h3>NEWS BITES</h3>
+            <span class="bites">Cat Emoji Goes Viral</span>
+            <span class="bites">Buy Youtube Views</span>
+            <span class="bites">Home Business Advertising Ideas</span>
+            <span class="bites">Advertising Internet Online</span>
+            <span class="bites">Illustration in Marketing Materials</span>
+            <span class="bites">Finally a Top Secret Way You Can</span>
 
-      <div class="Story">
-        <h2>Orca Spends Vacation at Land World Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-      </div>
 
-      <div class="Story">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-      </div>
-
-      <div class="Spin Blank">
-        <h2>Earth Spins Backwards for 2017</h2>
-      </div>
-
-      <div class="Cam Blank">
-        <h2>Research shows Cameras Erase memory</h2>
-      </div>
-
-    </div> <!-- First Column div end -->
-
-    <div class="Second Column">
-
-      <div class="Story">  <!-- second colum first article-->
-        <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-      </div>
-
-    <div class="Cat Blank">
-      <h2>Cats in Control-Is It a Thing?</h2>
+          </div>
+        </div>
+        <!--End of Column Small-->
     </div>
-      <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
 
+<footer>
+    <div class="footer">
+      <span>MY Times</span>
 
-  </div> <!-- Second Column div end -->
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
 
-  <!--SIDE COLUMN-->
-  <div class="Column">
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png">
-    <h3>NEW BITES</h3>
-      <div class="BitMenu">
-        <span>Cat Emoji Goes Viral</span>
-        <span>Buy Youtube Views</span>
-        <span>Home Business Advertising Ideas</span>
-        <span>Advertising Internet Online</span>
-        <span>Illustration in Marketing Materials</span>
-        <span>Finally a Top Secret Way You Can</span>
-      </div>
+      <span>© 2016, My Times (A Division of Codecademy bite)</span>
     </div>
+</footer>
+
 
   </body>
 </html>
