--- a/index.html
+++ b/index.html
@@ -2,119 +2,122 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Times</title>
-    <link href="./style.css" type="text/css" rel="stylesheet">
+    <title>Tea Cozy</title>
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
     <header>
-      <div class="HeadLogo">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
-        <span>My Times</span>
+        <div class="HeaderLogo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
+        </div>
         <nav>
-          <span><a href="#">World</a></span>
-          <span><a href="#">US</a></span>
-          <span><a href="#">Tech</a></span>
-          <span><a href="#">Science</a></span>
+          <span><a href="#">Mission</a></span>
+          <span><a href="#">Featured Tea</a></span>
+          <span><a href="#">Locations</a></span>
         </nav>
-      </div>
     </header>
 
-      <!-- Main News body-->
+<!--MAIN CONTAINER-->
 
-      <div class="Content">
-        <!--Large Column-->
+  <div class="MainContainer">
 
-        <div class="column large">
-          <div class="lead-story"> <!-- MOTHER STORY-->
-            <div class="image-content">
-              <span class="lead-story-image">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
-            </div>
-            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-          </div>
+ <!-- First ROW Our Mission -->
+    <div class="OurMissionImg flex-container Img">
+      <div class="content">
+        <h2>Our Mission</h2>
+        <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
+      </div>
 
-          <div class="stories"> <!-- ORCA STORY-->
-
-               <div class="story">
-                  <div class="text-content">
-                    <h2>Orca Spends Vacation at Land World Puget</h2>
-                    <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-                  </div>
-
-                  <div class="earth-image image-content"> <!-- Earth  STORY-->
-                    <span>Earth Spins Backwards for 2017</span>
-                  </div>
-              </div>
-
-            <div class="stories"> <!-- Burger STORY-->
-
-              <div class="story">
-                <div class="text-content">
-                  <h2>Burger for Breakfast: How Early is too Early?</h2>
-                  <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-                </div>
-                <div class="camera-image image-content">
-                  <span>Research Show Image Erase Memory</span>
-                </div>
-              </div>
-            </div>
-
-            </div>
-          </div>
-
-        <!--Column Medium-->
-
-        <div class="column medium">
-          <div class="stories">    <!--FBI-->
-            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-            <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-
-          </div>
-
-          <div class="cat-image image-content">
-            <span>Cats in Control-Is It a Thing?</span>
-          </div>
-
-          <div class="stories">
-            <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
-
-          </div>
-        </div>
-
-        <!--Column Small-->
-
-        <div class="column small">
-          <div class="bites-image">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="">
-          </div>
-
-          <div class="new-bites">
-            <h3>NEWS BITES</h3>
-            <span class="bites">Cat Emoji Goes Viral</span>
-            <span class="bites">Buy Youtube Views</span>
-            <span class="bites">Home Business Advertising Ideas</span>
-            <span class="bites">Advertising Internet Online</span>
-            <span class="bites">Illustration in Marketing Materials</span>
-            <span class="bites">Finally a Top Secret Way You Can</span>
-
-
-          </div>
-        </div>
-        <!--End of Column Small-->
     </div>
 
-<footer>
-    <div class="footer">
-      <span>MY Times</span>
+ <!-- Second Row Tea of the Month  -->
+    <div class="TeaMonth">
+      <div class=" content">
+        <h3>Tea of the Month</h3>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="flex-container pics">
 
-      <span><a href="#">World</a></span>
-      <span><a href="#">U.S.</a></span>
-      <span><a href="#">Tech</a></span>
-      <span><a href="#">Science</a></span>
+          <div class="PicBlock">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+            <span>Fall Berry Blitz Tea</span>
+          </div>
 
-      <span>© 2016, My Times (A Division of Codecademy bite)</span>
+          <div class="PicBlock">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
+            <span>Spiced Rum Tea</span>
+          </div>
+
+
+          <div class="PicBlock">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="">
+            <span>Seasonal Donuts</span>
+          </div>
+
+          <div class="PicBlock">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
+            <span>Myrtle Ave Tea</span>
+          </div>
+
+          <div class="PicBlock">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
+            <span>Bedford Bizarre Tea</span>
+          </div>
+
+        </div>
+      </div>
+
     </div>
-</footer>
+
+ <!-- Third Row Locations-->
+
+    <div class="Locations Img">
+
+      <div class="flex-container">
+          <div class=LocaLoc>
+            <h3>Location</h3>
+          </div>
+        <div class="PicBlock">
+          <h3>Downtown</h3>
+          <span>384 West 4th St</span>
+          <span>Suite 108</span>
+          <span>Portland, Maine</span>
+        </div>
+
+        <div class="PicBlock">
+          <h3>East Bayside</h3>
+          <span>3433 Phisherman's Avenue</span>
+          <span>(Northwest Corner)</span>
+          <span>Portland, Maine</span>
+        </div>
+
+        <div class="PicBlock">
+          <h3>Oakdale</h3>
+          <span>515 Crescent Avenue</span>
+          <span>Second Floor</span>
+          <span>Portland, Maine</span>
+        </div>
+    </div>
+  </div>
 
 
+<div class="Contact">
+  <div class="FooterInfo">
+    <h2 >The Tea Cozy</h2>
+    <p>contact@theteacozy.com</p>
+    <p>917-555-8904</p>
+  </div>
+
+</div>
+</div>
+
+<!--END MAIN CONTAINER-->
+
+
+<!-- Footer-->
+
+    <footer>
+      <span>copyright The Tea Cozy 2017</span>
+    </footer>
   </body>
 </html>
